continue on the benchmark

--- a/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
@@ -23,7 +23,7 @@
     "from timeit import repeat\n",
     "\n",
     "sys.path.append('../..')\n",
-    "from modules import path_solver, dual_sorted_L1_norm as dual_norm\n",
+    "from modules import path_solver, dual_sorted_L1_norm as dual_norm, PD_gap\n",
     "from slope.solvers import prox_grad, admm, hybrid_cd #, newt_alm, oracle_cd"
    ]
   },
@@ -76,85 +76,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.01771704 -0.0767345   0.06228448  0.         -0.05466252  0.\n",
-      " -0.06228448 -0.06228448 -0.          0.0767345   0.0767345 ] 479.1821639573727 2.9309887850104133e-13\n",
-      "FISTA: 1.54e-02s\n",
-      "[ 0.01771704 -0.0767345   0.06228448  0.         -0.05466252  0.\n",
-      " -0.06228448 -0.06228448  0.          0.0767345   0.0767345 ] 479.18216395737244 2.4980018054066022e-15\n",
-      "Anderson PGD: 3.28e-03s\n",
-      "[ 1.77170375e-02 -7.67345017e-02  6.22844801e-02  2.61756177e-12\n",
-      " -5.46625248e-02  6.83378722e-12 -6.22844801e-02 -6.22844801e-02\n",
-      " -3.36268458e-12  7.67345017e-02  7.67345017e-02] 479.18216395882337 9.11604125519716e-13\n",
-      "ADMM: 1.30e-02s\n",
-      "[ 0.01771704 -0.0767345   0.06228448  0.         -0.05466252  0.\n",
-      " -0.06228448 -0.06228448 -0.          0.0767345   0.0767345 ] 479.18216395737306 7.271960811294775e-15\n",
-      "hybrid CD: 4.11e-03s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmark/../../modules/solvers.py:89: NumbaExperimentalFeatureWarning: Use of isinstance() detected. This is an experimental feature.\n",
-      "  m = face_pattern(grad, Lambda, rtol_pattern, atol_pattern)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.01771704 -0.0767345   0.06228448  0.         -0.05466252  0.\n",
-      " -0.06228448 -0.06228448  0.          0.0767345   0.0767345 ] 479.1821639573734 -1.1368683772161603e-12\n",
-      "path (our): 2.16e-03s\n"
+      "FISTA: 5.02e-01s\n",
+      "[ 0.07328962 -0.17520925  0.          0.03055732 -0.08215734  0.01589062\n",
+      " -0.08431084 -0.08431084 -0.014562    0.14920723  0.20882182] 374.52499980726094 9.76385639006594e-13 \n",
+      "\n",
+      "Anderson PGD: 5.95e-02s\n",
+      "[ 0.07328962 -0.17520925  0.          0.03055732 -0.08215734  0.01589062\n",
+      " -0.08431084 -0.08431084 -0.014562    0.14920723  0.20882182] 374.52499980726094 9.76385639006594e-13 \n",
+      "\n",
+      "ADMM: 1.72e-02s\n",
+      "[ 7.32896188e-02 -1.75209246e-01  6.82586500e-14  3.05573223e-02\n",
+      " -8.21573432e-02  1.58906203e-02 -8.43108421e-02 -8.43108421e-02\n",
+      " -1.45619996e-02  1.49207231e-01  2.08821822e-01] 374.5249998072608 9.76385639006594e-13 \n",
+      "\n",
+      "hybrid CD: 5.57e-03s\n",
+      "[ 0.07328962 -0.17520925  0.          0.03055732 -0.08215734  0.01589062\n",
+      " -0.08431084 -0.08431084 -0.014562    0.14920723  0.20882182] 374.52499980726094 9.76385639006594e-13 \n",
+      "\n",
+      "path (our): 2.46e-03s\n",
+      "[ 0.07328962 -0.17520925  0.          0.03055732 -0.08215734  0.01589062\n",
+      " -0.08431084 -0.08431084 -0.014562    0.14920723  0.20882182] 374.5249998072609 -1.6484591469634324e-12 \n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Check-up and numba compilation\n",
-    "gamma = dual_norm(X.T@y, Lambda) / 2\n",
+    "ratio = 0.1; gamma = ratio*dual_norm(X.T@y, Lambda)\n",
     "nb_loops = 1; nb_runs = 1\n",
     "\n",
     "# FISTA\n",
-    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0])\n",
+    "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0])',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'FISTA: {time_fista:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1],'\\n')\n",
     "\n",
     "# Anderson PGD\n",
-    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0])\n",
+    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0])',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'Anderson PGD: {time_pgd:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1],'\\n')\n",
     "\n",
     "# ADMM (with rho=100)\n",
-    "sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0])\n",
+    "time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0])',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'ADMM: {time_admm:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1],'\\n')\n",
     "\n",
     "# hybrid CD\n",
-    "sol, intercept, primals, gaps, times, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])\n",
+    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'hybrid CD: {time_cd:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1],'\\n')\n",
     "\n",
     "# path (our)\n",
     "sol, (primal, gap), k = path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
-    "print(sol, primal, gap)\n",
     "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'path (our): {time_path:.2e}s')\n",
+    "print(sol, primal, gap, '\\n')\n",
     "\n",
     "# # oracle CD\n",
     "# sol, intercept, primals, gaps, times = oracle_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)\n",
@@ -173,7 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Benchmark\n",
+    "benchmark = pd.DataFrame({},index=['FISTA', 'Anderson PGD', 'ADMM (rho=100)', 'hybrid CD', 'path (our)'])\n",
+    "benchmark.columns.name='gamma / gamma_max'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -199,51 +201,45 @@
        "      <th>gamma / gamma_max</th>\n",
        "      <th>0.5</th>\n",
        "      <th>0.1</th>\n",
-       "      <th>0.02</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>FISTA</th>\n",
-       "      <td>1.14e-02</td>\n",
-       "      <td>2.19e-02</td>\n",
-       "      <td>2.91e-02</td>\n",
+       "      <td>1.36e-02</td>\n",
+       "      <td>4.47e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Anderson PGD</th>\n",
-       "      <td>4.43e-03</td>\n",
-       "      <td>3.06e-02</td>\n",
-       "      <td>1.57e-02</td>\n",
+       "      <td>5.26e-03</td>\n",
+       "      <td>7.02e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ADMM (rho=100)</th>\n",
-       "      <td>1.92e-02</td>\n",
-       "      <td>4.24e-03</td>\n",
-       "      <td>1.60e-03</td>\n",
+       "      <td>2.38e-02</td>\n",
+       "      <td>7.18e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hybrid CD</th>\n",
-       "      <td>2.34e-03</td>\n",
-       "      <td>6.61e-03</td>\n",
-       "      <td>4.75e-03</td>\n",
+       "      <td>2.39e-03</td>\n",
+       "      <td>7.91e-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>path (our)</th>\n",
-       "      <td>7.78e-04</td>\n",
-       "      <td>5.43e-03</td>\n",
-       "      <td>6.03e-03</td>\n",
+       "      <td>6.58e-04</td>\n",
+       "      <td>4.51e-03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "gamma / gamma_max      0.5      0.1     0.02\n",
-       "FISTA             1.14e-02 2.19e-02 2.91e-02\n",
-       "Anderson PGD      4.43e-03 3.06e-02 1.57e-02\n",
-       "ADMM (rho=100)    1.92e-02 4.24e-03 1.60e-03\n",
-       "hybrid CD         2.34e-03 6.61e-03 4.75e-03\n",
-       "path (our)        7.78e-04 5.43e-03 6.03e-03"
+       "gamma / gamma_max      0.5      0.1\n",
+       "FISTA             1.36e-02 4.47e-02\n",
+       "Anderson PGD      5.26e-03 7.02e-02\n",
+       "ADMM (rho=100)    2.38e-02 7.18e-03\n",
+       "hybrid CD         2.39e-03 7.91e-03\n",
+       "path (our)        6.58e-04 4.51e-03"
       ]
      },
      "metadata": {},
@@ -251,33 +247,27 @@
     }
    ],
    "source": [
-    "# Benchmark\n",
-    "nb_loops = 1000; nb_runs = 7 # nb_loops = 1000\n",
-    "\n",
-    "benchmark = pd.DataFrame({},index=['FISTA', 'Anderson PGD', 'ADMM (rho=100)', 'hybrid CD', 'path (our)'])\n",
-    "benchmark.columns.name='gamma / gamma_max'\n",
-    "\n",
-    "for ratio in [0.5, 0.1, 0.02]:\n",
-    "    gamma = ratio*dual_norm(X.T@y, Lambda)\n",
-    "    time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)',\n",
-    "                        repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)',\n",
-    "                      repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)',\n",
-    "                       repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)',\n",
-    "                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
-    "                       repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    benchmark[f'{ratio}'] = [time_fista, time_pgd, time_admm, time_cd, time_path]\n",
-    "    \n",
+    "nb_loops = 1000; nb_runs = 7\n",
+    "# for ratio in [0.5, 0.1, 0.02]:\n",
+    "gamma = ratio*dual_norm(X.T@y, Lambda)\n",
+    "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0])',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0])',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0])',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "benchmark[f'{ratio}'] = [time_fista, time_pgd, time_admm, time_cd, time_path]\n",
     "with pd.option_context('display.float_format', '{:,.2e}'.format):\n",
-    "    display(benchmark)"
+    "    display(benchmark)   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,13 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../results/wine-quality_benchmark.txt', 'a') as f:\n",
     "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
