--- a/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,48 +75,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:67: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  c = coefs / coefs.sum()\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:67: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c = coefs / coefs.sum()\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:68: RuntimeWarning: invalid value encountered in multiply\n",
+      "  w_acc = np.sum(last_K_w[:-1] * c[:, None], axis=0)\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/numpy/core/fromnumeric.py:86: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anderson PGD: 1.30e+01s\n",
+      "[ 0. -0. -0. ...  0. -0.  0.] 24.57302843463191 7.567280135845067e-13 \n",
+      "\n",
+      "hybrid CD: 4.58e-02s\n",
+      "[ 0. -0. -0. ...  0. -0.  0.] 24.57302843463192 3.1530333899354446e-14 \n",
+      "\n",
+      "path (our): 5.11e-02s\n",
+      "[0. 0. 0. ... 0. 0. 0.] 24.573028434631908 0.0 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Check-up and numba compilation\n",
-    "gamma = dual_norm(X.T@y, Lambda) / 2\n",
+    "ratio = 0.5; gamma = ratio*dual_norm(X.T@y, Lambda)\n",
     "nb_loops = 1; nb_runs = 1\n",
     "\n",
-    "# FISTA\n",
-    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)',\n",
-    "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "print(f'FISTA: {time_fista:.2e}s')\n",
+    "# # FISTA\n",
+    "# sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)\n",
+    "# time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
+    "#                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "# print(f'FISTA: {time_fista:.2e}s')\n",
+    "# print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
     "# Anderson PGD\n",
-    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)\n",
+    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'Anderson PGD: {time_pgd:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
-    "# ADMM (with rho=100)\n",
-    "sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)',\n",
-    "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "print(f'ADMM: {time_admm:.2e}s')\n",
+    "# # ADMM (with rho=100)\n",
+    "# sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=500_000)\n",
+    "# time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=500_000)',\n",
+    "#                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "# print(f'ADMM: {time_admm:.2e}s')\n",
+    "# print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
     "# hybrid CD\n",
-    "sol, intercept, primals, gaps, times, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)\n",
-    "print(sol, X.shape[0]*primals[-1], gaps[-1])\n",
-    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)',\n",
+    "sol, intercept, primals, gaps, times, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])\n",
+    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'hybrid CD: {time_cd:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
     "# path (our)\n",
     "sol, (primal, gap), k = path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
-    "print(sol, primal, gap)\n",
     "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'path (our): {time_path:.2e}s')\n",
+    "print(sol, primal, gap, '\\n')\n",
     "\n",
     "# # oracle CD\n",
     "# sol, intercept, primals, gaps, times = oracle_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)\n",
@@ -135,30 +165,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "benchmark = pd.DataFrame({},index=['Anderson PGD', 'hybrid CD', 'path (our)'])\n",
+    "benchmark.columns.name='gamma / gamma_max'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:67: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  c = coefs / coefs.sum()\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:67: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  c = coefs / coefs.sum()\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/pgd.py:68: RuntimeWarning: invalid value encountered in multiply\n",
+      "  w_acc = np.sum(last_K_w[:-1] * c[:, None], axis=0)\n",
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/numpy/core/fromnumeric.py:86: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Benchmark\n",
     "nb_loops = 100; nb_runs = 7 \n",
     "\n",
-    "benchmark = pd.DataFrame({},index=['Anderson PGD', 'ADMM (rho=100)', 'hybrid CD', 'path (our)'])\n",
-    "benchmark.columns.name='gamma / gamma_max'\n",
-    "\n",
-    "for ratio in [0.5, 0.1, 0.02]:\n",
-    "    gamma = ratio*dual_norm(X.T@y, Lambda)\n",
-    "    # time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12)',\n",
-    "    #                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12)',\n",
-    "                      repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12)',\n",
-    "                       repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12)',\n",
-    "                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
-    "                       repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "    benchmark[f'{ratio}'] = [time_fista, time_pgd, time_admm, time_cd, time_path]\n",
-    "    \n",
+    "# for ratio in [0.5, 0.1, 0.02]:\n",
+    "gamma = ratio*dual_norm(X.T@y, Lambda)\n",
+    "# time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
+    "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
+    "                  repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "# time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
+    "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
+    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "benchmark[f'{ratio}'] = [time_pgd, time_cd, time_path]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with pd.option_context('display.float_format', '{:,.2e}'.format):\n",
     "    display(benchmark)"
    ]
