--- a/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
@@ -75,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FISTA: 1.10e+02s\n",
+      "[ 0. -0. -0. ...  0. -0.  0.] 24.573028434631915 7.251976796851523e-13 \n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -96,13 +105,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anderson PGD: 1.30e+01s\n",
+      "Anderson PGD: 1.58e+01s\n",
       "[ 0. -0. -0. ...  0. -0.  0.] 24.57302843463191 7.567280135845067e-13 \n",
       "\n",
-      "hybrid CD: 4.58e-02s\n",
+      "ADMM: 6.51e+02s\n",
+      "[ 6.24500451e-17  1.38777878e-16  9.71445147e-17 ...  6.93889390e-17\n",
+      "  8.58688121e-17 -2.77555756e-17] 24.573028434635113 3.2318592246838307e-12 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/slope/solvers/hybrid.py:45: NumbaPerformanceWarning: '@' is faster on contiguous arrays, called on (Array(float64, 1, 'A', False, aligned=True), Array(float64, 1, 'A', False, aligned=True))\n",
+      "  XTX[ind] = (X[:, ind] @ X[:, ind]) / n_samples\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hybrid CD: 4.00e-02s\n",
       "[ 0. -0. -0. ...  0. -0.  0.] 24.57302843463192 3.1530333899354446e-14 \n",
-      "\n",
-      "path (our): 5.11e-02s\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/../../modules/solvers.py:89: NumbaExperimentalFeatureWarning: Use of isinstance() detected. This is an experimental feature.\n",
+      "  m = face_pattern(grad, Lambda, rtol_pattern, atol_pattern)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path (our): 3.75e-02s\n",
       "[0. 0. 0. ... 0. 0. 0.] 24.573028434631908 0.0 \n",
       "\n"
      ]
@@ -113,26 +154,26 @@
     "ratio = 0.5; gamma = ratio*dual_norm(X.T@y, Lambda)\n",
     "nb_loops = 1; nb_runs = 1\n",
     "\n",
-    "# # FISTA\n",
-    "# sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)\n",
-    "# time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
-    "#                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "# print(f'FISTA: {time_fista:.2e}s')\n",
-    "# print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
+    "# FISTA\n",
+    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=1_000_000)\n",
+    "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=1_000_000)',\n",
+    "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "print(f'FISTA: {time_fista:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
     "# Anderson PGD\n",
-    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)\n",
-    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
+    "sol, intercept, primals, gaps, times = prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=1_000_000)\n",
+    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=1_000_000)',\n",
     "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "print(f'Anderson PGD: {time_pgd:.2e}s')\n",
     "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
-    "# # ADMM (with rho=100)\n",
-    "# sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=500_000)\n",
-    "# time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=500_000)',\n",
-    "#                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "# print(f'ADMM: {time_admm:.2e}s')\n",
-    "# print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
+    "# ADMM (with rho=100)\n",
+    "sol, intercept, primals, gaps, times = admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=1_000_000)\n",
+    "time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=1_000_000)',\n",
+    "                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "print(f'ADMM: {time_admm:.2e}s')\n",
+    "print(sol, X.shape[0]*primals[-1], X.shape[0]*gaps[-1], '\\n')\n",
     "\n",
     "# hybrid CD\n",
     "sol, intercept, primals, gaps, times, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])\n",
@@ -191,6 +232,57 @@
       "/Users/xdupuis/miniconda3/envs/slopecd/lib/python3.9/site-packages/numpy/core/fromnumeric.py:86: RuntimeWarning: invalid value encountered in reduce\n",
       "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>gamma / gamma_max</th>\n",
+       "      <th>0.5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Anderson PGD</th>\n",
+       "      <td>1.45e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hybrid CD</th>\n",
+       "      <td>4.19e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>path (our)</th>\n",
+       "      <td>3.83e-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "gamma / gamma_max      0.5\n",
+       "Anderson PGD      1.45e+01\n",
+       "hybrid CD         4.19e-02\n",
+       "path (our)        3.83e-02"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -224,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
