add SURE exact minimization

--- a/experiments/full_paths/wine-quality.ipynb
+++ b/experiments/full_paths/wine-quality.ipynb
@@ -22,7 +22,7 @@
     "from timeit import default_timer as timer\n",
     "\n",
     "sys.path.append('../..')\n",
-    "from modules import full_path, path_solver, dual_sorted_L1_norm as dual_norm, pattern, full_path_LASSO"
+    "from modules import full_path, path_solver, dual_sorted_L1_norm as dual_norm, pattern, full_path_LASSO, min_SURE, min_SURE_LASSO"
    ]
   },
   {
@@ -70,64 +70,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SLOPE\n",
+    "\n",
+    "### Full path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 898.291, elapsed time = 1.08e-04s, gap = 0.00e+00\n",
-      "node 1: gamma = 850.633, elapsed time = 4.96e-04s, gap = 4.55e-13\n",
-      "node 2: gamma = 834.176, elapsed time = 7.89e-04s, gap = 4.55e-13\n",
-      "node 3: gamma = 518.014, elapsed time = 1.12e-03s, gap = 3.98e-13\n",
-      "node 4: gamma = 503.663, elapsed time = 1.44e-03s, gap = 3.98e-13\n",
-      "node 5: gamma = 490.715, elapsed time = 1.82e-03s, gap = 5.12e-13\n",
-      "node 6: gamma = 393.072, elapsed time = 2.07e-03s, gap = 6.25e-13\n",
-      "node 7: gamma = 342.330, elapsed time = 2.43e-03s, gap = 7.39e-13\n",
-      "node 8: gamma = 331.802, elapsed time = 2.70e-03s, gap = 8.53e-13\n",
-      "node 9: gamma = 321.273, elapsed time = 3.06e-03s, gap = 7.96e-13\n",
-      "node 10: gamma = 269.699, elapsed time = 3.45e-03s, gap = 1.71e-13\n",
-      "node 11: gamma = 253.852, elapsed time = 3.68e-03s, gap = 8.53e-13\n",
-      "node 12: gamma = 241.336, elapsed time = 4.03e-03s, gap = 1.14e-13\n",
-      "node 13: gamma = 193.852, elapsed time = 4.41e-03s, gap = 2.27e-13\n",
-      "node 14: gamma = 184.583, elapsed time = 5.09e-03s, gap = 2.27e-13\n",
-      "node 15: gamma = 164.497, elapsed time = 5.49e-03s, gap = 2.27e-13\n",
-      "node 16: gamma = 144.624, elapsed time = 5.81e-03s, gap = 3.98e-13\n",
-      "node 17: gamma = 143.223, elapsed time = 6.14e-03s, gap = 5.68e-13\n",
-      "node 18: gamma = 137.079, elapsed time = 6.41e-03s, gap = 4.55e-13\n",
-      "node 19: gamma = 136.620, elapsed time = 6.68e-03s, gap = 4.55e-13\n",
-      "node 20: gamma = 132.797, elapsed time = 6.93e-03s, gap = 3.41e-13\n",
-      "node 21: gamma = 131.668, elapsed time = 7.26e-03s, gap = 6.25e-13\n",
-      "node 22: gamma = 126.725, elapsed time = 7.58e-03s, gap = 4.55e-13\n",
-      "node 23: gamma = 121.627, elapsed time = 7.96e-03s, gap = 5.68e-13\n",
-      "node 24: gamma = 119.728, elapsed time = 8.56e-03s, gap = 5.68e-13\n",
-      "node 25: gamma = 109.581, elapsed time = 9.16e-03s, gap = 2.84e-13\n",
-      "node 26: gamma = 107.880, elapsed time = 9.52e-03s, gap = 3.41e-13\n",
-      "node 27: gamma = 87.120, elapsed time = 1.01e-02s, gap = 6.25e-13\n",
-      "node 28: gamma = 84.077, elapsed time = 1.07e-02s, gap = 5.68e-13\n",
-      "node 29: gamma = 72.251, elapsed time = 1.11e-02s, gap = 5.12e-13\n",
-      "node 30: gamma = 62.681, elapsed time = 1.15e-02s, gap = 6.25e-13\n",
-      "node 31: gamma = 55.356, elapsed time = 1.19e-02s, gap = 4.55e-13\n",
-      "node 32: gamma = 55.152, elapsed time = 1.23e-02s, gap = 5.68e-13\n",
-      "node 33: gamma = 54.888, elapsed time = 1.26e-02s, gap = 3.98e-13\n",
-      "node 34: gamma = 50.924, elapsed time = 1.29e-02s, gap = 3.98e-13\n",
-      "node 35: gamma = 50.688, elapsed time = 1.32e-02s, gap = 4.55e-13\n",
-      "node 36: gamma = 39.172, elapsed time = 1.35e-02s, gap = 6.82e-13\n",
-      "node 37: gamma = 22.413, elapsed time = 1.38e-02s, gap = 3.41e-13\n",
-      "node 38: gamma = 19.965, elapsed time = 1.41e-02s, gap = 6.25e-13\n",
-      "node 39: gamma = 18.629, elapsed time = 1.44e-02s, gap = 6.25e-13\n",
-      "node 40: gamma = 16.974, elapsed time = 1.48e-02s, gap = 5.12e-13\n",
-      "node 41: gamma = 11.477, elapsed time = 1.51e-02s, gap = 3.41e-13\n",
-      "node 42: gamma = 11.243, elapsed time = 1.57e-02s, gap = 4.55e-13\n",
-      "node 43: gamma = 9.739, elapsed time = 1.62e-02s, gap = 6.82e-13\n",
-      "node 44: gamma = 9.268, elapsed time = 1.66e-02s, gap = 4.55e-13\n",
-      "node 45: gamma = 2.773, elapsed time = 1.70e-02s, gap = 7.96e-13\n",
-      "node 46: gamma = 2.479, elapsed time = 1.74e-02s, gap = 5.12e-13\n",
-      "node 47: gamma = 0.943, elapsed time = 1.77e-02s, gap = 5.68e-13\n",
-      "node 48: gamma = 0.916, elapsed time = 1.80e-02s, gap = 5.68e-13\n",
-      "node 49: gamma = 0.000, elapsed time = 1.84e-02s, gap = 2.84e-13\n"
+      "node 0: gamma = 898.291, elapsed time = 1.63e-04s, gap = 0.00e+00\n",
+      "node 1: gamma = 850.633, elapsed time = 4.86e-03s, gap = 4.55e-13\n",
+      "node 2: gamma = 834.176, elapsed time = 6.71e-03s, gap = 4.55e-13\n",
+      "node 3: gamma = 518.014, elapsed time = 7.16e-03s, gap = 3.98e-13\n",
+      "node 4: gamma = 503.663, elapsed time = 7.53e-03s, gap = 3.98e-13\n",
+      "node 5: gamma = 490.715, elapsed time = 7.89e-03s, gap = 5.12e-13\n",
+      "node 6: gamma = 393.072, elapsed time = 8.18e-03s, gap = 6.25e-13\n",
+      "node 7: gamma = 342.330, elapsed time = 8.80e-03s, gap = 7.39e-13\n",
+      "node 8: gamma = 331.802, elapsed time = 9.15e-03s, gap = 8.53e-13\n",
+      "node 9: gamma = 321.273, elapsed time = 9.48e-03s, gap = 7.96e-13\n",
+      "node 10: gamma = 269.699, elapsed time = 9.94e-03s, gap = 1.71e-13\n",
+      "node 11: gamma = 253.852, elapsed time = 1.03e-02s, gap = 8.53e-13\n",
+      "node 12: gamma = 241.336, elapsed time = 1.08e-02s, gap = 1.14e-13\n",
+      "node 13: gamma = 193.852, elapsed time = 1.12e-02s, gap = 2.27e-13\n",
+      "node 14: gamma = 184.583, elapsed time = 1.17e-02s, gap = 2.27e-13\n",
+      "node 15: gamma = 164.497, elapsed time = 1.21e-02s, gap = 2.27e-13\n",
+      "node 16: gamma = 144.624, elapsed time = 1.26e-02s, gap = 3.98e-13\n",
+      "node 17: gamma = 143.223, elapsed time = 1.31e-02s, gap = 5.68e-13\n",
+      "node 18: gamma = 137.079, elapsed time = 1.35e-02s, gap = 4.55e-13\n",
+      "node 19: gamma = 136.620, elapsed time = 1.40e-02s, gap = 4.55e-13\n",
+      "node 20: gamma = 132.797, elapsed time = 1.44e-02s, gap = 3.41e-13\n",
+      "node 21: gamma = 131.668, elapsed time = 1.49e-02s, gap = 6.25e-13\n",
+      "node 22: gamma = 126.725, elapsed time = 1.54e-02s, gap = 4.55e-13\n",
+      "node 23: gamma = 121.627, elapsed time = 1.58e-02s, gap = 5.68e-13\n",
+      "node 24: gamma = 119.728, elapsed time = 1.62e-02s, gap = 5.68e-13\n",
+      "node 25: gamma = 109.581, elapsed time = 1.68e-02s, gap = 2.84e-13\n",
+      "node 26: gamma = 107.880, elapsed time = 1.73e-02s, gap = 3.41e-13\n",
+      "node 27: gamma = 87.120, elapsed time = 1.77e-02s, gap = 6.25e-13\n",
+      "node 28: gamma = 84.077, elapsed time = 1.80e-02s, gap = 5.68e-13\n",
+      "node 29: gamma = 72.251, elapsed time = 1.84e-02s, gap = 5.12e-13\n",
+      "node 30: gamma = 62.681, elapsed time = 1.88e-02s, gap = 6.25e-13\n",
+      "node 31: gamma = 55.356, elapsed time = 1.91e-02s, gap = 4.55e-13\n",
+      "node 32: gamma = 55.152, elapsed time = 1.95e-02s, gap = 5.68e-13\n",
+      "node 33: gamma = 54.888, elapsed time = 1.99e-02s, gap = 3.98e-13\n",
+      "node 34: gamma = 50.924, elapsed time = 2.03e-02s, gap = 3.98e-13\n",
+      "node 35: gamma = 50.688, elapsed time = 2.07e-02s, gap = 4.55e-13\n",
+      "node 36: gamma = 39.172, elapsed time = 2.11e-02s, gap = 6.82e-13\n",
+      "node 37: gamma = 22.413, elapsed time = 2.16e-02s, gap = 3.41e-13\n",
+      "node 38: gamma = 19.965, elapsed time = 2.20e-02s, gap = 6.25e-13\n",
+      "node 39: gamma = 18.629, elapsed time = 2.25e-02s, gap = 6.25e-13\n",
+      "node 40: gamma = 16.974, elapsed time = 2.29e-02s, gap = 5.12e-13\n",
+      "node 41: gamma = 11.477, elapsed time = 2.33e-02s, gap = 3.41e-13\n",
+      "node 42: gamma = 11.243, elapsed time = 2.37e-02s, gap = 4.55e-13\n",
+      "node 43: gamma = 9.739, elapsed time = 2.40e-02s, gap = 6.82e-13\n",
+      "node 44: gamma = 9.268, elapsed time = 2.43e-02s, gap = 4.55e-13\n",
+      "node 45: gamma = 2.773, elapsed time = 2.47e-02s, gap = 7.96e-13\n",
+      "node 46: gamma = 2.479, elapsed time = 2.50e-02s, gap = 5.12e-13\n",
+      "node 47: gamma = 0.943, elapsed time = 2.54e-02s, gap = 5.68e-13\n",
+      "node 48: gamma = 0.916, elapsed time = 2.58e-02s, gap = 5.68e-13\n",
+      "node 49: gamma = 0.000, elapsed time = 2.61e-02s, gap = 2.84e-13\n"
      ]
     }
    ],
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,8 +189,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solver"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +205,7 @@
      "output_type": "stream",
      "text": [
       "pattern for 0.5 x gamma_max: [ 1 -4  3  0 -2  0 -3 -3  0  4  4]\n",
-      "elapsed time = 3.09e-03s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
+      "elapsed time = 1.98e-03s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
      ]
     }
    ],
@@ -203,28 +219,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SURE exact minimization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 614.683, elapsed time = 1.82e-04s\n",
-      "node 1: gamma = 476.147, elapsed time = 4.23e-04s\n",
-      "node 2: gamma = 242.719, elapsed time = 8.01e-04s\n",
-      "node 3: gamma = 136.465, elapsed time = 1.52e-03s\n",
-      "node 4: gamma = 91.902, elapsed time = 2.41e-03s\n",
-      "node 5: gamma = 85.998, elapsed time = 3.11e-03s\n",
-      "node 6: gamma = 74.879, elapsed time = 4.04e-03s\n",
-      "node 7: gamma = 30.414, elapsed time = 4.54e-03s\n",
-      "node 8: gamma = 26.418, elapsed time = 5.04e-03s\n",
-      "node 9: gamma = 16.538, elapsed time = 5.82e-03s\n",
-      "node 10: gamma = 11.760, elapsed time = 6.10e-03s\n",
-      "node 11: gamma = 9.430, elapsed time = 6.43e-03s\n",
-      "node 12: gamma = 7.428, elapsed time = 6.77e-03s\n",
-      "node 13: gamma = 0.000, elapsed time = 7.14e-03s\n"
+      "SURE minimizer: gamma = 18.629\n",
+      "SURE minimum: sure(gamma) = 3.464\n",
+      "solution in gamma: [ 0.04990686 -0.18598742 -0.01842615  0.0261484  -0.0879266   0.04020234\n",
+      " -0.10419991 -0.04990686 -0.04990686  0.15437017  0.2721147 ]\n",
+      "solution pattern in gamma: [ 4 -8 -1  2 -5  3 -6 -4 -4  7  9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma2 = np.linalg.norm(y-X@ols,ord=2)**2/(X.shape[0]-X.shape[1])\n",
+    "Critical, SURE, Sol = min_SURE(X, y, Lambda, Gamma, M, sigma2, tol=1e-10)   \n",
+    "i0 = np.argmin(SURE)\n",
+    "print(f'SURE minimizer: gamma = {Critical[i0]:.3f}')\n",
+    "print(f'SURE minimum: sure(gamma) = {SURE[i0]:.3f}')     \n",
+    "print(f'solution in gamma: {Sol[i0]}')  \n",
+    "print(f'solution pattern in gamma: {pattern(Sol[i0],tol=1e-10)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LASSO\n",
+    "\n",
+    "### Full path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node 0: gamma = 614.683, elapsed time = 1.08e-04s\n",
+      "node 1: gamma = 476.147, elapsed time = 4.38e-03s\n",
+      "node 2: gamma = 242.719, elapsed time = 6.06e-03s\n",
+      "node 3: gamma = 136.465, elapsed time = 6.31e-03s\n",
+      "node 4: gamma = 91.902, elapsed time = 6.53e-03s\n",
+      "node 5: gamma = 85.998, elapsed time = 6.79e-03s\n",
+      "node 6: gamma = 74.879, elapsed time = 7.13e-03s\n",
+      "node 7: gamma = 30.414, elapsed time = 7.47e-03s\n",
+      "node 8: gamma = 26.418, elapsed time = 7.86e-03s\n",
+      "node 9: gamma = 16.538, elapsed time = 8.23e-03s\n",
+      "node 10: gamma = 11.760, elapsed time = 8.58e-03s\n",
+      "node 11: gamma = 9.430, elapsed time = 8.98e-03s\n",
+      "node 12: gamma = 7.428, elapsed time = 9.42e-03s\n",
+      "node 13: gamma = 0.000, elapsed time = 9.82e-03s\n"
      ]
     }
    ],
@@ -235,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,11 +328,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig.savefig('../results/wine-quality_LASSOpath', bbox_inches=\"tight\", pad_inches=0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SURE exact minimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SURE minimizer: gamma = 11.760\n",
+      "SURE minimum: sure(gamma) = 4.130\n",
+      "solution in gamma: [ 0.         -0.18308103  0.          0.00305619 -0.08247961  0.02912847\n",
+      " -0.09176088  0.         -0.06093142  0.14040801  0.30419793]\n",
+      "solution sign in gamma: [ 0. -1.  0.  1. -1.  1. -1.  0. -1.  1.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Critical, SURE, Sol = min_SURE_LASSO(X, y, Gamma, S, sigma2, tol=1e-10)\n",
+    "i0 = np.argmin(SURE)\n",
+    "print(f'SURE minimizer: gamma = {Critical[i0]:.3f}')\n",
+    "print(f'SURE minimum: sure(gamma) = {SURE[i0]:.3f}')\n",
+    "Sol[i0][np.abs(Sol[i0])<1e-10] = 0     \n",
+    "print(f'solution in gamma: {Sol[i0]}')  \n",
+    "print(f'solution sign in gamma: {np.sign(Sol[i0])}')"
    ]
   },
   {
