remove old benchmarks

--- a/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark = pd.DataFrame({},index=['Anderson PGD', 'hybrid CD', 'path (our)'])\n",
+    "benchmark = pd.DataFrame({},index=['hybrid CD', 'path (our)']) #'FISTA', 'Anderson PGD', 'ADMM (rho=100)',\n",
     "benchmark.columns.name='gamma / gamma_max'"
    ]
   },
@@ -156,15 +156,15 @@
     "gamma = ratio*dual_norm(X.T@y, Lambda)\n",
     "# time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
     "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
-    "                  repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "# time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
+    "#                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "# time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
     "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
     "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
     "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
     "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "benchmark[f'{ratio}'] = [time_pgd, time_cd, time_path]\n"
+    "benchmark[f'{ratio}'] = [time_cd, time_path]\n"
    ]
   },
   {
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../results/riboflavin_benchmark.txt', 'a') as f:\n",
-    "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
+    "# with open('../results/riboflavin_benchmark.txt', 'a') as f:\n",
+    "#                 f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
   }
  ],
