--- a/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
@@ -248,7 +248,6 @@
    ],
    "source": [
     "nb_loops = 1000; nb_runs = 7\n",
-    "# for ratio in [0.5, 0.1, 0.02]:\n",
     "gamma = ratio*dual_norm(X.T@y, Lambda)\n",
     "time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0])',\n",
     "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
@@ -280,8 +279,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../results/wine-quality_benchmark.txt', 'a') as f:\n",
-    "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
+    "# with open('../results/wine-quality_benchmark.txt', 'a') as f:\n",
+    "#                 f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
   },
   {
