--- a/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The data set can be downloaded from <http://archive.ics.uci.edu/ml/datasets/Wine+Quality>.\n",
     "\n",
-    "The solvers (except our `path_solver`) were coded by Larsson et al. for the benchmark of their paper *Coordinate Descent for SLOPE*; their code is available at <https://github.com/jolars/slopecd> and needs to be installed to run the simulations here."
+    "The solvers (except our `path_solver`) were coded by Larsson et al. for the benchmark of their paper [*Coordinate Descent for SLOPE*](https://proceedings.mlr.press/v206/larsson23a.html); their code is available at <https://github.com/jolars/slopecd> and needs to be installed to run the simulations here."
    ]
   },
   {
